fix word wrap on avatar alt text for xanax cake

--- a/sass/xanax_cake/style.scss
+++ b/sass/xanax_cake/style.scss
@@ -986,3 +986,7 @@ ol {
 #forum_search_cat_list {
   border: none;
 }
+
+.avatar_container {
+  word-wrap: normal;
+}
